<resources>
    <string name="app_name">Start Techopolice</string>
    <string name="textview">TextView</string>
    <string name="hello_testactivity">Hello TestActivity</string>
    <string name="enter_text">Enter text</string>
    <string name="send_text">Send Text</string>
    <string name="result_text">Result Text</string>
    <string name="empty_text" />

    /* LAUNCHER */
    <string name="label_launcher_activity_test">Test</string>
    <string name="label_launcher_activity_second_main">Second</string>

    /* CONCATENATION */
    <string name="hello_username">Hello, %1$s!</string>
    <string name="go_over_testactivity">Go Over TestActivity</string>
    <string name="go_over_secondmainactivity">Go Over SecondMainActivity</string>
    <string name="_001_introduction">001 Introduction</string>
    <string name="_002_layout">002 Layout</string>
    <string name="text">Text</string>
    <string name="next">Next</string>
    <string name="text_1">text 1</string>
    <string name="text_2">text 2</string>
    <string name="text_3">text 3</string>
    <string name="text_long_long_long">Text long long long</string>
    <string name="movie_name">Movie name</string>
    <string name="movie_description">Movie description</string>
    <string name="recycler_view">Recycler View</string>
    <string name="fire">Fire</string>
    <string name="draw">Draw</string>
    <string name="handler_thread_sample">Handler Thread Sample</string>
    <string name="handlerthread_class">HandlerThread class</string>
    <string name="load_image_asynctask">Load image AsyncTask</string>
    <string name="start_loading">Start Loading</string>
    <string name="load">load</string>
    <string name="test_load_image_executor">Test Load Image Executor</string>
    <string name="asynctask">AsyncTask</string>
    <string name="test_progressbar_with_asynctask">Test ProgressBar with AsyncTask</string>
</resources>
