<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/introduction_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/_001_introduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/layout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/_002_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introduction_button" />

    <Button
        android:id="@+id/recycler_view_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_button" />

    <Button
        android:id="@+id/fire_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/fire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_button" />

    <Button
        android:id="@+id/draw_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/draw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fire_button" />

    <Button
        android:id="@+id/handler_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/handler_thread_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/draw_button" />

    <Button
        android:id="@+id/handler_thread_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/handlerthread_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/handler_button" />

    <Button
        android:id="@+id/load_image_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/load_image_asynctask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/handler_thread_button" />

    <Button
        android:id="@+id/test_load_image_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/test_load_image_executor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/load_image_button" />

    <Button
        android:id="@+id/download_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/asynctask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_load_image_button" />

</androidx.constraintlayout.widget.ConstraintLayout>